# rte2dvis

./: .gitignore  LICENSE  Makefile  README.md
MAKE/: Makefile.proj  Makefile.targets  Makefile.vars  makevars.mk.template
c-codes/: Makefile  Makefile.var  Makefile.vars  makevars.mk  makevars.mk.template  rte2dvis-v0.01-2013-11-07.tgz  runtest.sh
c-codes-new/: Makefile  Makefile.check  Makefile.proj  Makefile.targets  Makefile.vars  makevars.mk.template
derivation/: Makefile  derivation-latex.tex  derivation.nb  derivation.tex  log  main.tex  notes1.tex  notes2.tex  plane-divided-by-triangle.xlsx  sec1.tex  sec2.tex
derivation-old/: quadrature-rule.nb
fortran.old/: CMakeLists.txt  msh
fortran.old/src/: CMakeLists.txt  Makefile  cmd.f90  global.f90  inputs.f90  main  main.f90  zdotx2.f90
include/: ArcSinhMethod.h  GaussRule.h  LynessRule.h  Random.h  Solver_v1.h  StatVector.h  TimeStamp.h  WandzuraRule.h  file_io.h  int_trig.h  mesh.h  msh_io.h  msh_ray_tracing.h  quadrules.h  rmsm.h  solver_v1.h  solver_v2.h  sparse_mat.h  utils.h  v1.h
mll/: Makefile  mll.cpp  test.nb
mll-ml-c/: Makefile  makevars.mk
msh/: MSH.m  msh2dat.m  square.geo  square.msh  square1384.msh  square242.msh  square614.msh  square616.msh  square782.msh  square90.msh  square948.msh  t0.msh  t1.msh  t2.msh
notebook/: ACA.nb  batchsolve.nb  old-batchsolve.nb  old-sequential.nb  plot.nb  report1.nb  report2.nb  report3.nb  report4.nb  sequential.nb  sequential.nb.bak  sequential.nb.old  simplexcoord.nb  solve.m  solve0.m  solve1.m  test.m  test.nb  testmll.nb
script/: CMD.m  plot.m  (+7 more)
(+573 files in other folders)
